uprava cien, cisla, prepravneho poriadku, zmena hlavneho obrazku

--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
         <div class="col-xs-12 col-sm-6 col-lg-6 text-left text-center">
             <h1 class="section-title">Ceny</h1>
             <div class="ceny text-center">
-                <span> <b>0,75€/km</b> </span><br>
-                <span> min. jazdné <b>1,50€</b> </span><br>
-                <span> stojné <b>0,17€</b> za minútu </span>
+                <span> <b>0,85€/km</b> </span><br>
+                <span> <b>0,90€/km</b> </span><br>
+                <span> min. jazdné <b>2€</b> </span><br>
+                <span> stojné <b>0,25€</b> za minútu </span>
             </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-lg-6 image-right"></div>
@@ -97,9 +98,9 @@
                 <ul>
                     <li><i class="fa fa-plane" aria-hidden="true"></i>
                         <b>Letiská</b>
-                        <ul>Bratislava 70€</ul>
-                        <ul>Swechat 90€</ul>
-                        <ul>Budapešť 100€</ul>
+                        <ul>Bratislava 90€</ul>
+                        <ul>Swechat 110€</ul>
+                        <ul>Budapešť 125€</ul>
                     </li>
                 </ul>
             </div>
@@ -108,11 +109,11 @@
             <div class="sluzby text-center">
                 <ul>
                     <li><i class="bi bi-building"></i><b>Mestá</b>
-                        <ul>Topoľčany 15€</ul>
-                        <ul>Nitra 33€</ul>
-                        <ul>Bánovce n/B 13€</ul>
-                        <ul>Trenčín 33€</ul>
-                        <ul>Prievidza 23€</ul>
+                        <ul>Topoľčany 18€</ul>
+                        <ul>Nitra 45€</ul>
+                        <ul>Bánovce n/B 17€</ul>
+                        <ul>Trenčín 43€</ul>
+                        <ul>Prievidza 26€</ul>
                     </li>
                 </ul>
             </div>
@@ -136,19 +137,14 @@
                             href="tel:0905 300 230" class="text-decoration-none">0905 300 230</a></td>
                 </tr>
                 <tr>
-                    <td style="font-size: 1.5rem; line-height: 1.4;"><i class="bi bi-phone"
-                                                                        style="color: #b1b4bd"></i><a
-                            href="tel:0911 300 230" class="text-decoration-none">0911 300 230</a></td>
-                </tr>
-                <tr>
-                    <td style="font-size: 1.5rem; line-height: 1.4;"><i class="bi bi-phone"
-                                                                        style="color: #b1b4bd"></i><a
-                            href="tel:0948 300 230" class="text-decoration-none">0948 300 230</a></td>
-                </tr>
-                <tr>
                     <td style="font-size: 1.5rem; line-height: 1.4;"><i class="bi bi-facebook"
                                                                         style="color: #b1b4bd"></i><a
-                            href="https://www.facebook.com/staxi.staxi.9" class="text-decoration-none">Facebook</a></td>
+                            href="https://www.facebook.com/staxi.staxi.9" class="text-decoration-none"> Facebook</a></td>
+                </tr>
+                <tr>
+                    <td style="font-size: 1.5rem; line-height: 1.4;"><i class="bi bi-instagram"
+                                                                        style="color: #b1b4bd"></i><a
+                            href="https://www.instagram.com/staxi_partizanske" class="text-decoration-none"> Instagram</a></td>
                 </tr>
             </table>
         </div>
@@ -168,7 +164,7 @@
             <!--CONTENT-->
             <div class="modal-body" onmousedown='return false;'>
                 <div class="text-center">
-                    <b>Miroslav Gašparovič S-taxi, Nádražná 647/17, 958 01 Partizánske</b><br>
+                    <b>S-taxi, Nádražná 647/17, 958 01 Partizánske</b><br>
                     vydáva podľa § 26 a §4 56/2012 Z.z., Zákon o cestnej doprave a podľa 124/2012 Z.z.,
                     Vyhláška Ministerstva dopravy, výstavby a regionálneho rozvoja Slovenskej republiky,
                     ktorou sa vykonáva zákon č. 56/2012 Z.z. o cestnej doprave<br></div>
@@ -768,10 +764,10 @@
                     <b>Čl. 16</b><br>
                     <b>Záverečné ustanovenia</b><br></div>
                 <br>
-                Tento prepravný poriadok nadobúda účinnosť dňom: &nbsp;&nbsp;&nbsp; 21.5.2020<br>
+                Tento prepravný poriadok nadobúda účinnosť dňom: &nbsp;&nbsp;&nbsp; 11.10.2023<br>
                 <br>
                 <br>
-                V Partizánskom dňa: &nbsp;&nbsp;&nbsp; 21.5.2020<br>
+                V Partizánskom dňa: &nbsp;&nbsp;&nbsp; 11.10.2023<br>
                 <br>
                 <br>
                 <br>
