mobile view fix

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <div class="container-fluid" id="ceny">
     <div class="row">
         <div class="col-xs-12 col-sm-6 col-lg-6 text-left text-center">
-            <h1 class="section-title">Ceny</h1>
+            <h1 class="section-title">Ceny:</h1>
             <div class="ceny text-center">
                 <span> <b>0,85€/km</b> </span><br>
                 <span> <b>0,90€/km</b> </span><br>
@@ -90,31 +90,32 @@
 </div>
 
 <div class="container-fluid" id="sluzby">
-    <div class="row">
+    <div class="row text-center no-gutters">
         <div class="col-md-4 image-left"></div>
         <div class="col-md-4 text-right">
-            <div class="sluzby text-center">
-                <h1 class="section-title">Služby</h1>
+            <div class="sluzby ">
+                <h1 class="section-title">Služby:</h1>
                 <ul>
-                    <li><i class="fa fa-plane" aria-hidden="true"></i>
-                        <b>Letiská</b>
-                        <ul>Bratislava 90€</ul>
-                        <ul>Swechat 110€</ul>
-                        <ul>Budapešť 125€</ul>
-                    </li>
+                    <li><i class="fa fa-plane" aria-hidden="true"></i><b>Letiská</b></li>
+                    <ul>
+                        <li>Bratislava 90€</li>
+                        <li>Schwechat 110€</li>
+                        <li>Budapešť 125€</li>
+                    </ul>
                 </ul>
             </div>
         </div>
         <div class="col-md-4 text-right-right">
-            <div class="sluzby text-center">
+            <div class="sluzby ">
                 <ul>
-                    <li><i class="bi bi-building"></i><b>Mestá</b>
-                        <ul>Topoľčany 18€</ul>
-                        <ul>Nitra 45€</ul>
-                        <ul>Bánovce n/B 17€</ul>
-                        <ul>Trenčín 43€</ul>
-                        <ul>Prievidza 26€</ul>
-                    </li>
+                    <li><i class="bi bi-building"></i><b>Mestá</b></li>
+                    <ul>
+                        <li>Topoľčany 18€</li>
+                        <li>Nitra 45€</li>
+                        <li>Bánovce n/B 17€</li>
+                        <li>Trenčín 43€</li>
+                        <li>Prievidza 26€</li>
+                    </ul>
                 </ul>
             </div>
         </div>
@@ -122,7 +123,7 @@
 </div>
 
 
-<div class="fluid container contact-us" id="kontakty">
+<div class="container-fluid contact-us" id="kontakty">
     <div class="row">
         <div class="col"></div>
         <div class="col-md-6">
@@ -788,7 +789,7 @@
 <footer class="footer">
     <div class="container mt-auto py-3">
         <span class="text-muted">Created by Gašparovič Boris © 2021</span>
-        <p>Počet návštev: <span id="count">0</span></p>
+<!--        <p>Počet návštev: <span id="count">0</span></p>-->
     </div>
 </footer>
 
